--- a/Sniffer/CMakeLists.txt
+++ b/Sniffer/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.23)
 project("sniffer")
 
-#Проверить работу скачивания и сборки libpcap
+#Также должны быть установлены flex и bison
 FetchContent_Declare(
       libpcap
-      GIT_REPOSITORY https://github.com/the-tcpdump-group/libpcap.git
+      GIT_REPOSITORY https://github.com/the-tcpdump-group/libpcap
 	  SOURCE_DIR 	${CMAKE_CURRENT_SOURCE_DIR}/libpcap
       GIT_TAG libpcap-1.10.5 
     )
@@ -19,7 +19,7 @@ add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
 target_sources(${PROJECT_NAME} PRIVATE ${Sources})
 #Проверить и это тоже
-target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap/include)
+#target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap)
 target_link_libraries(${PROJECT_NAME} PRIVATE libpcap)
 
 if(BUILD_TESTING)
@@ -30,8 +30,8 @@ if(BUILD_TESTING)
 	add_executable(${PROJECT_NAME}_test ${Test_Sources})
 	
 	target_sources(${PROJECT_NAME}_test PRIVATE ${Sources})
-   #Проверить и это тоже
-	target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap/include)
+   	#Проверить и это тоже
+	#target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap)
 	#Проверить и это тоже
 	target_link_libraries(${PROJECT_NAME}_test PRIVATE libpcap gtest_main gmock)
 	
