--- a/Sniffer/CMakeLists.txt
+++ b/Sniffer/CMakeLists.txt
@@ -18,9 +18,12 @@ list(REMOVE_ITEM Sources ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
 target_sources(${PROJECT_NAME} PRIVATE ${Sources})
-#Проверить и это тоже
-#target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap)
-target_link_libraries(${PROJECT_NAME} PRIVATE libpcap)
+
+target_include_directories(${PROJECT_NAME} PRIVATE 
+    ${libpcap_SOURCE_DIR}
+    ${libpcap_BINARY_DIR}
+)
+target_link_libraries(${PROJECT_NAME} PRIVATE pcap)
 
 if(BUILD_TESTING)
 	file(GLOB Test_Sources CONFIGURE_DEPENDS
@@ -30,10 +33,12 @@ if(BUILD_TESTING)
 	add_executable(${PROJECT_NAME}_test ${Test_Sources})
 	
 	target_sources(${PROJECT_NAME}_test PRIVATE ${Sources})
-   	#Проверить и это тоже
-	#target_include_directories(${PROJECT_NAME}_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libpcap)
-	#Проверить и это тоже
-	target_link_libraries(${PROJECT_NAME}_test PRIVATE libpcap gtest_main gmock)
+
+	target_include_directories(${PROJECT_NAME}_test PRIVATE 
+    ${libpcap_SOURCE_DIR}
+    ${libpcap_BINARY_DIR}
+	)
+	target_link_libraries(${PROJECT_NAME}_test PRIVATE pcap gtest_main gmock)
 	
 	add_test(NAME ${PROJECT_NAME}_TEST COMMAND ${PROJECT_NAME}_test)
 endif()
