--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,4 @@ else()
 	message(STATUS "TESTS OFF")
 endif()
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Server_Client)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Sniffer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Server_Client_and_Sniffer)
